[gd_scene load_steps=37 format=3 uid="uid://kxcd2tjupf4d"]

[ext_resource type="Script" path="res://Scripts/level_2.gd" id="1_5w57r"]
[ext_resource type="Texture2D" uid="uid://bnsyvayucrkww" path="res://Assets/vecteezy_ballroom-interior-in-medieval-royal-castle_15370469.jpg" id="1_tuayn"]
[ext_resource type="Texture2D" uid="uid://bnwpe8no7k6tm" path="res://Assets/A Corridor Inside A Palace. It Is An Illustration .png" id="2_sjqoa"]
[ext_resource type="Texture2D" uid="uid://cnqn7qskxsvsp" path="res://Assets/A Prison Door Inside The Palace. It Is An Illustra.png" id="3_g6l8r"]
[ext_resource type="Texture2D" uid="uid://bi68oyiv07wp0" path="res://Assets/Balcony Of The Indian Palace From Inside. Illustra.png" id="4_amsor"]
[ext_resource type="Texture2D" uid="uid://ccr0u1bjh5kgu" path="res://Assets/vecteezy_ancient-palace-or-castle-corridor-interior_23878092.jpg" id="5_x3tuh"]
[ext_resource type="Texture2D" uid="uid://crn0um4l7xwlj" path="res://Assets/vecteezy_castle-dungeon-interior-with-torches_20237170.jpg" id="6_r2adp"]
[ext_resource type="Texture2D" uid="uid://bmbbb23ouhru8" path="res://Assets/dark-medieval-castle-dungeon-and-empty-prison-cell-free-vector.jpg" id="7_pkyp3"]
[ext_resource type="Texture2D" uid="uid://dqmqx1qks8jpx" path="res://Assets/cartoon-royal-bedroom-with-vintage-furniture-free-vector.jpg" id="7_pvi0v"]
[ext_resource type="Texture2D" uid="uid://dms4opxwdfx27" path="res://Assets/medieval-castle-dungeon-wall-game-cartoon-free-vector.jpg" id="8_tsklo"]
[ext_resource type="Texture2D" uid="uid://dcs4dvvslahja" path="res://Assets/medieval-castle-gate-at-night-palace-exterior-free-vector.jpg" id="9_u1r8x"]
[ext_resource type="Texture2D" uid="uid://c1d7yahqssfec" path="res://Assets/Prison Cell Of The Indian Palace. Illustration (1).png" id="10_r07l2"]
[ext_resource type="Texture2D" uid="uid://byrgycjahkq23" path="res://Assets/Prison Cell Of The Indian Palace. Illustration.png" id="11_xcgkd"]
[ext_resource type="Texture2D" uid="uid://bg8ku4kt1onxc" path="res://Assets/Training Field Of The Indian Palace. Illustration.png" id="12_56yns"]
[ext_resource type="Texture2D" uid="uid://qbsvdrp5hf0e" path="res://Assets/abandoned-castle-cave-for-medieval-game-cartoon-free-vector.jpg" id="13_d5glk"]
[ext_resource type="Script" path="res://Scripts/trustUI.gd" id="14_cbtqx"]
[ext_resource type="Texture2D" uid="uid://ck6ewgqxtqr6h" path="res://Assets/vecteezy_medieval-stone-castle-game-background-at-night_23869976.jpg" id="14_lisy7"]
[ext_resource type="Texture2D" uid="uid://c5hcoqyxemowv" path="res://Assets/vecteezy_ancient-architecture-with-arches-and-torches_13961672.jpg" id="15_8sqtx"]
[ext_resource type="PackedScene" uid="uid://c6dhyg8dfw0f6" path="res://Scenes/Doctor.tscn" id="18_2lrfq"]
[ext_resource type="PackedScene" uid="uid://cgsasdc36nq5x" path="res://Scenes/jester.tscn" id="19_fafa3"]
[ext_resource type="PackedScene" uid="uid://c7ctnfh1o7j7o" path="res://Scenes/advisor.tscn" id="20_hkn0u"]
[ext_resource type="PackedScene" uid="uid://cornx7bt1cipu" path="res://Scenes/astrologer.tscn" id="21_secwp"]
[ext_resource type="PackedScene" uid="uid://bounqv4dmbg08" path="res://Scenes/warrior.tscn" id="22_wivfb"]
[ext_resource type="PackedScene" uid="uid://cdxa0x5qmjvvo" path="res://Scenes/chicken_lady.tscn" id="23_s2vnk"]
[ext_resource type="PackedScene" uid="uid://bcum03snkpbty" path="res://Scenes/thief.tscn" id="24_8p2gi"]
[ext_resource type="PackedScene" uid="uid://dn4gfauwyeroc" path="res://Scenes/farmer's_daughter.tscn" id="25_2yvia"]
[ext_resource type="PackedScene" uid="uid://c7mlg7ogd385m" path="res://Scenes/gold_seller.tscn" id="26_p03g8"]
[ext_resource type="PackedScene" uid="uid://wpjgqmwohi06" path="res://Scenes/kaal's_messenger.tscn" id="27_5corl"]
[ext_resource type="PackedScene" uid="uid://d3symr72yv6b2" path="res://Scenes/dialogue_ui.tscn" id="28_6j5mc"]
[ext_resource type="PackedScene" uid="uid://dww0esqqrlruv" path="res://Scenes/little_brother.tscn" id="28_pvadr"]
[ext_resource type="PackedScene" uid="uid://fst4eajpohpv" path="res://Scenes/queen's_servant.tscn" id="29_pu4i4"]
[ext_resource type="Script" path="res://Scripts/Click.gd" id="29_rb0pt"]
[ext_resource type="PackedScene" uid="uid://cexjkr0mcorow" path="res://Scenes/prisoner.tscn" id="30_e3vr6"]
[ext_resource type="PackedScene" uid="uid://cpv6ijkd46urq" path="res://Scenes/council.tscn" id="30_v0lj4"]
[ext_resource type="AudioStream" uid="uid://bu6yd4oawabel" path="res://Audio/After kaals messenger leaves.mp3" id="36_uruhk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m8bqv"]
bg_color = Color(0.305882, 0.0980392, 0.380392, 1)

[node name="Level 2" type="Node2D"]
script = ExtResource("1_5w57r")

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="Court" type="TextureRect" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_tuayn")
metadata/_edit_use_anchors_ = true

[node name="Outside" type="Button" parent="Background/Court"]
custom_minimum_size = Vector2(100, 25)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -12.5
offset_right = 50.0
offset_bottom = 12.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_m8bqv")
text = "^ Outside ^"

[node name="Corridor" type="Button" parent="Background/Court"]
custom_minimum_size = Vector2(100, 25)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 409.0
offset_top = -12.5
offset_right = 509.0
offset_bottom = 12.5
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_m8bqv")
text = "<< Corridor"

[node name="Prison cells" type="Button" parent="Background/Court"]
visible = false
custom_minimum_size = Vector2(100, 25)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -509.0
offset_top = -12.5
offset_right = -409.0
offset_bottom = 12.5
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_m8bqv")
text = "Prison Cells >>
"

[node name="Moms room" type="TextureRect" parent="Background"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_g6l8r")

[node name="Courtroom" type="Button" parent="Background/Moms room"]
custom_minimum_size = Vector2(100, 25)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -449.0
offset_top = -12.5
offset_right = -349.0
offset_bottom = 12.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_m8bqv")
text = "<< Court"

[node name="Mom\'s Room" type="Button" parent="Background/Moms room"]
custom_minimum_size = Vector2(100, 25)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -12.5
offset_right = 50.0
offset_bottom = 12.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_m8bqv")
text = "  ^ Queen Mother's Room ^  "

[node name="My room" type="Button" parent="Background/Moms room"]
visible = false
custom_minimum_size = Vector2(100, 25)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -681.0
offset_top = -12.5
offset_right = -521.0
offset_bottom = 12.5
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_m8bqv")
text = "To my Room >>"

[node name="Corridor 2" type="TextureRect" parent="Background"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -60.0
offset_right = 96.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_xcgkd")

[node name="Sleep" type="Button" parent="Background/Corridor 2"]
custom_minimum_size = Vector2(100, 25)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -12.5
offset_right = 50.0
offset_bottom = 12.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_m8bqv")
text = "My Room"

[node name="Mom\'s cor" type="Button" parent="Background/Corridor 2"]
custom_minimum_size = Vector2(100, 25)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 274.0
offset_right = 50.0
offset_bottom = 299.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_m8bqv")
text = "  v To Queen Mother's Room v  "

[node name="Mom\'s Room" type="TextureRect" parent="Background"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_pvi0v")
flip_h = true

[node name="backfrommomroom" type="Button" parent="Background/Mom\'s Room"]
custom_minimum_size = Vector2(100, 25)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -122.0
offset_right = 50.0
offset_bottom = -97.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_m8bqv")
text = "  v Corridor v  "

[node name="Playground" type="TextureRect" parent="Background"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -60.0
offset_right = 96.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12_56yns")

[node name="Main Gate" type="Button" parent="Background/Playground"]
visible = false
custom_minimum_size = Vector2(100, 25)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 47.5
offset_right = 50.0
offset_bottom = 72.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_m8bqv")
text = " ^ Gate ^ "

[node name="Courtfrompg" type="Button" parent="Background/Playground"]
custom_minimum_size = Vector2(100, 25)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 274.0
offset_right = 50.0
offset_bottom = 299.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_m8bqv")
text = " v Court v "

[node name="Main Gate" type="TextureRect" parent="Background"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_amsor")

[node name="Exit to corridor" type="Button" parent="Background/Main Gate"]
custom_minimum_size = Vector2(100, 25)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 242.5
offset_right = 50.0
offset_bottom = 267.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_m8bqv")
text = "  v Go Inside v "

[node name="Corridor to dungeon" type="TextureRect" parent="Background"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_x3tuh")

[node name="PristoCourt" type="Button" parent="Background/Corridor to dungeon"]
custom_minimum_size = Vector2(100, 25)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -12.5
offset_right = 50.0
offset_bottom = 12.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_m8bqv")
text = " ^ Enter Prison ^ "

[node name="Enter Prison" type="Button" parent="Background/Corridor to dungeon"]
custom_minimum_size = Vector2(100, 25)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 274.0
offset_right = 50.0
offset_bottom = 299.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_m8bqv")
text = " v Court v "

[node name="Corridor to dungeon night" type="TextureRect" parent="Background"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -384.0
offset_right = 384.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("14_lisy7")

[node name="Enter Dungeon" type="Button" parent="Background/Corridor to dungeon night"]
custom_minimum_size = Vector2(100, 25)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -12.5
offset_right = 50.0
offset_bottom = 12.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_m8bqv")
text = " ^ Enter Prison ^ "

[node name="3 doors" type="TextureRect" parent="Background"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("15_8sqtx")

[node name="Dungeon 1" type="Button" parent="Background/3 doors"]
custom_minimum_size = Vector2(100, 25)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 356.0
offset_top = -12.5
offset_right = 503.0
offset_bottom = 12.5
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_m8bqv")
text = "<< Back to corridor
"

[node name="Dungeon 2" type="Button" parent="Background/3 doors"]
custom_minimum_size = Vector2(100, 25)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -12.5
offset_right = 50.0
offset_bottom = 12.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_m8bqv")
text = "^ Prison Cells ^"

[node name="Dungeon 3" type="Button" parent="Background/3 doors"]
custom_minimum_size = Vector2(100, 25)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -471.0
offset_top = -12.5
offset_right = -371.0
offset_bottom = 12.5
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_m8bqv")
text = "Locked Door"

[node name="Prison cell" type="TextureRect" parent="Background"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -384.0
offset_top = -108.0
offset_right = 384.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_tsklo")

[node name="Prisoner" type="Button" parent="Background/Prison cell"]
custom_minimum_size = Vector2(100, 25)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.5
offset_top = 49.5
offset_right = 82.5
offset_bottom = 74.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_m8bqv")
text = "Talk To Prisoner"

[node name="Cell of Guardian" type="TextureRect" parent="Background"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_pkyp3")

[node name="Behind Locked door" type="TextureRect" parent="Background"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -384.0
offset_right = 384.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("13_d5glk")

[node name="Trust" type="Label" parent="Background"]
visible = false
offset_right = 40.0
offset_bottom = 23.0
text = "Current Trust = "
script = ExtResource("14_cbtqx")

[node name="Node" type="Node" parent="."]

[node name="Prison Cell Closed" type="TextureRect" parent="Node"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -384.0
offset_top = -36.0
offset_right = 384.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_u1r8x")

[node name="Secret doors" type="TextureRect" parent="Node"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -60.0
offset_right = 96.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_r07l2")

[node name="Dungeon Cell" type="TextureRect" parent="Node"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -384.0
offset_top = -108.0
offset_right = 384.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_r2adp")

[node name="Corridor" type="TextureRect" parent="Node"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_sjqoa")
expand_mode = 2

[node name="Characters_Dialogues" type="CanvasLayer" parent="."]

[node name="Character" type="Control" parent="Characters_Dialogues"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Doctor" parent="Characters_Dialogues/Character" instance=ExtResource("18_2lrfq")]
visible = false

[node name="Jester" parent="Characters_Dialogues/Character" instance=ExtResource("19_fafa3")]
visible = false

[node name="Advisor" parent="Characters_Dialogues/Character" instance=ExtResource("20_hkn0u")]
visible = false

[node name="Astrologer" parent="Characters_Dialogues/Character" instance=ExtResource("21_secwp")]
visible = false

[node name="Warrior" parent="Characters_Dialogues/Character" instance=ExtResource("22_wivfb")]
visible = false

[node name="Chicken Lady" parent="Characters_Dialogues/Character" instance=ExtResource("23_s2vnk")]
visible = false

[node name="Thief" parent="Characters_Dialogues/Character" instance=ExtResource("24_8p2gi")]
visible = false

[node name="Farmer\'s Daughter" parent="Characters_Dialogues/Character" instance=ExtResource("25_2yvia")]
visible = false

[node name="Gold Seller" parent="Characters_Dialogues/Character" instance=ExtResource("26_p03g8")]
visible = false

[node name="Kaal\'s Messenger" parent="Characters_Dialogues/Character" instance=ExtResource("27_5corl")]
visible = false

[node name="LittleBrother" parent="Characters_Dialogues/Character" instance=ExtResource("28_pvadr")]
visible = false

[node name="Queen\'s Servant" parent="Characters_Dialogues/Character" instance=ExtResource("29_pu4i4")]
visible = false

[node name="Prisoner" parent="Characters_Dialogues/Character" instance=ExtResource("30_e3vr6")]
visible = false

[node name="DialogueUI" parent="Characters_Dialogues" instance=ExtResource("28_6j5mc")]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
offset_left = -576.0
offset_top = -150.0
offset_right = 576.0
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Characters_Dialogues/DialogueUI"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -145.0
offset_top = -23.0
offset_right = -16.0
grow_horizontal = 0
grow_vertical = 0
text = "Click to continue"
horizontal_alignment = 2
vertical_alignment = 1
script = ExtResource("29_rb0pt")

[node name="Council" parent="Characters_Dialogues" instance=ExtResource("30_v0lj4")]
visible = false

[node name="ELSE" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("36_uruhk")
autoplay = true

[connection signal="pressed" from="Background/Court/Outside" to="." method="_on_outside_pressed"]
[connection signal="pressed" from="Background/Court/Corridor" to="." method="_on_corridor_pressed"]
[connection signal="pressed" from="Background/Court/Prison cells" to="." method="_on_prison_cells_pressed"]
[connection signal="pressed" from="Background/Moms room/Courtroom" to="." method="_on_courtroom_pressed"]
[connection signal="pressed" from="Background/Moms room/Mom\'s Room" to="." method="_on_moms_room_pressed"]
[connection signal="pressed" from="Background/Moms room/My room" to="." method="_on_my_room_pressed"]
[connection signal="pressed" from="Background/Corridor 2/Sleep" to="." method="_on_sleep_pressed"]
[connection signal="pressed" from="Background/Corridor 2/Mom\'s cor" to="." method="_on_moms_cor_pressed"]
[connection signal="pressed" from="Background/Mom\'s Room/backfrommomroom" to="." method="_on_backfrommomroom_pressed"]
[connection signal="pressed" from="Background/Playground/Main Gate" to="." method="_on_main_gate_pressed"]
[connection signal="pressed" from="Background/Playground/Courtfrompg" to="." method="_on_courtfrompg_pressed"]
[connection signal="pressed" from="Background/Main Gate/Exit to corridor" to="." method="_on_exit_to_corridor_pressed"]
[connection signal="pressed" from="Background/Corridor to dungeon/PristoCourt" to="." method="_on_pristo_court_pressed"]
[connection signal="pressed" from="Background/Corridor to dungeon/Enter Prison" to="." method="_on_enter_prison_pressed"]
[connection signal="pressed" from="Background/3 doors/Dungeon 1" to="." method="_on_dungeon_1_pressed"]
[connection signal="pressed" from="Background/3 doors/Dungeon 2" to="." method="_on_dungeon_2_pressed"]
[connection signal="pressed" from="Background/Prison cell/Prisoner" to="." method="_on_prisoner_pressed"]
